# game

./: .gitignore  CLAUDE.md  Cargo.toml
assets/: level.ldtk
src/: action.rs  animation.rs  background.rs  bubble.rs  build.rs  camera.rs  character.rs  debug.rs  docking.rs  effects.rs  enemy.rs  faction.rs  health.rs  interaction.rs  inventory.rs  main.rs  movement.rs  origin.rs  player.rs  registry.rs  save.rs  station.rs  ui.rs  world.rs
src/ship/: bullet.rs  mod.rs  turret.rs
